<?xml version="1.0"?>
<package>
  <name>teleop_twist_keyboard_fr</name>
  <version>0.6.2</version>
  <description>Generic keyboard teleop for twist robots. Customized to fr kbd by newubu</description>

  <maintainer email="newubu@todo.todo">newubu</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url> -->

  <author>Graylin Trevor Jay, newubu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
